# elmo_ethercat_sdk

./: .gitignore  CMakeLists.txt  Elmo ECAT 00010420 V11.xml  README.md  elmo_twitter_sdos  package.xml  tmp.org
elmo/: CMakeLists.txt  package.xml
elmo/include/elmo/: Command.hpp  Controlword.hpp  DriveState.hpp  Elmo.hpp  Exception.hpp  Reading.hpp  Statusword.hpp  helper.hpp
elmo/src/elmo/: Command.cpp  Controlword.cpp  Elmo.cpp  Reading.cpp  Statusword.cpp
elmo/src/examples/: reading_test.cpp
elmo_ethercat/: CMakeLists.txt  package.xml
elmo_ethercat/include/elmo_ethercat/: Configuration.hpp  ConfigurationParser.hpp  ElmoEthercat.hpp  ElmoEthercatMaster.hpp  ElmoEthercatSlave.hpp  Error.hpp  ObjectDictionary.hpp  PdoTypeEnum.hpp  Reading.hpp  RxPdo.hpp  TxPdo.hpp
elmo_ethercat/src/elmo_ethercat/: Configuration.cpp  ConfigurationParser.cpp  ElmoEthercat.cpp  ElmoEthercatMaster.cpp  ElmoEthercatSlave.cpp  Reading.cpp
elmo_examples/: CMakeLists.txt  ConfigurationTemplate.yaml  README.md  SetupTemplate.yaml  package.xml
elmo_examples/src/: cst_example.cpp  csv_example_standalone.cpp
example_configs/: Elmo.yaml
include/elmo_ethercat_sdk/: Command.hpp  Configuration.hpp  ConfigurationParser.hpp  Controlword.hpp  DriveState.hpp  Elmo.hpp  Error.hpp  Exception.hpp  ModeOfOperationEnum.hpp  ObjectDictionary.hpp  PdoTypeEnum.hpp  Reading.hpp  RxPdo.hpp  Statusword.hpp  TxPdo.hpp
setup/: build.sh  setup_ws.repos
src/elmo_ethercat_sdk/: Command.cpp  Configuration.cpp  ConfigurationParser.cpp  Controlword.cpp  DriveState.cpp  Elmo.cpp  PdoTypeEnum.cpp  Reading.cpp  Statusword.cpp
